--- a/index.html
+++ b/index.html
@@ -1,58 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Diseño css</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-    </head>
-    <body> 
-        <div class="conteiner-nav">
-            <nav class="navbar" role="navigation">
-                <a href="index.html" class="brand">
-                </a>
-                
-        </div>
-        <header class="conteiner-nav">
-                <nav class="navbar" 
-                        <a href="index.html" class="brand"></a>
-                        <ul class="nav-links">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="Otrapagina.html">Otrapagina</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                    <button class="button-menu-toggle">Menu</button>
-        </header>
-        <main>
-            <div class="container"> 
-                <h1>¡Bienvenidos a mi primer website!</h1>
-                <p>Contenido principal de la página.</p>
-                <section>
+
+<head>
+    <title> Diseño css</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
+<body>
+    <div class="conteiner-nav">
+        <nav class="navbar" role="navigation">
+            <a href="index.html" class="brand">
+            </a>
+
+    </div>
+    <header class="conteiner-nav">
+        <nav class="navbar"> 
+            <a href="index.html" class="brand"></a>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="Otrapagina.html">Otrapagina</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <button class="button-menu-toggle">Menu</button>
+    </header>
+    <main>
+        <div class="container">
+            <h1>¡Bienvenidos a mi primer website!</h1>
+            <p>Contenido principal de la página.</p>
+            <section>
                 <h2>Presentación</h2>
                 <p>Soy Victoria, ¡y esta es mi primera pagina web!
-                Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
-                </section>
-                <section>
+                    Estoy aprendiendo desarrollo web para crear sitios web visualmente atrapantes y funcionales.</p>
+            </section>
+            <section>
                 <h2>Lo que se viene...</h2>
-                <p>A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript. 
-                Estos lenguajes me ayudarán a crear una base sólida en el desarrollo web front-end.</p>
+                <p>A lo largo de este curso, estaré aprendiendo HTML, CSS y JavaScript.
+                    Estos lenguajes me ayudarán a crear una base sólida en el desarrollo web front-end.</p>
                 <p>¡MUCHAS GRACIAS!</p>
-                </section>
-                  </div>
-                  <div class="video-conteiner">
-                  <video width="360" height="315" src="Humbe - EL POETA (LetraLyrics).mp4"></video>
+            </section>
+        </div>
+        <div class="video-conteiner">
+            <video controls>
+                <source src="Humbe - EL POETA (LetraLyrics).mp4" type="video/mp4">
+                Tu navegador no admite el elemento de video.
+            </video>
+    </main>
+    <footer>
+        <p>Pongamos información sobre el desarrollador o la compañia</p>
+        <button onclick="showAlert()">¡Haz clic en mí!</button>
+    </footer>
+    <script src="scripts.js"></script>
+</body>
 
-                  </div>
-                  <video controls>
-                   <source src="Humbe - EL POETA (LetraLyrics).mp4" type="video/mp4">
-                   Tu navegador no admite el elemento de video. 
-                  </video>
-        </main>
-        <footer>
-            <p>Pongamos información sobre el desarrollador o la compañia</p>
-            <button onclick="showAlert()">¡Haz clic en mí!</button>
-        </footer>
-        <script src="scripts.js"></script>
-    </body>
 </html>
